tests/fail/builtin_execfile--NameError.py
"""'execfile' should not be in the built-in namespace."""
_ = execfile
